Allow any URI, but at least require a scheme.