@@ -2,8 +2,8 @@ package net.spy.digg;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
@@ -41,9 +41,13 @@ public class Digg {
 	public Digg(String k) {
 		super();
 		try {
-			new URL(k);
-		} catch(MalformedURLException e) {
-			throw new IllegalArgumentException("Invalid URL:  " + k, e);
+			URI u=new URI(k);
+			if(u.getScheme() == null) {
+				throw new IllegalArgumentException("Invalid URI (no scheme): "
+					+ k);
+			}
+		} catch(URISyntaxException e) {
+			throw new IllegalArgumentException("Invalid URI:  " + k, e);
 		}
 		appKey=k;
 	}
@@ -513,4 +517,8 @@ public class Digg {
 		return rv;
 	}
 
+	@Override
+	public String toString() {
+		return "{Digg app=" + appKey + "}";
+	}
 }
